# mcp_langchain

./: .gitignore
agent_intern/: .env.example  .gitignore  README.md  pyproject.toml  requirements.tt  requirements.txt
agent_intern/src/: agent_spam_handler.py  convert_table_to_markdown.py  gmail_reader.py
langgraph_agent_tools/: main.py  pyproject.toml  requirements.txt
langgraph_agent_tools/basic_chatbot/: basic-chatbot.ipynb
langgraph_agent_tools/human_in_loop/: human_loop.ipynb
mcp_agents/: .gitignore  copilot_chat.py  copilot_tools.py  gcal_tools.py  gdocs_tools.py  gmail_tools.py  gslides_tools.py  jira_tools.py  main.py  mcp_server.py  pyproject.toml  requirements.txt
mcp_agents/copilot_chatbot/: chatbot_server.py
mcp_agents/gcal_agent/: gcal_server.py
mcp_agents/gdocs_agent/: gdocs_server.py
mcp_agents/gmail_agent/: gmail_server.py
mcp_agents/gslides_agent/: gslides_server.py
mcp_agents/jira_agent/: jira_server.py
mcp_agents/static/: chat.css
mcp_agents/templates/: chat.html
sample_langgraph/: client.py  mathserver.py  pyproject.toml  requirements.txt  weather.py
