[project]
name = "universal-data-copilot"
version = "0.1.0"
description = "Universal Data Copilot - A natural language interface to Google Workspace and JIRA using LangChain, LangGraph, and MCP"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [ "mcp>=1.9.4",]
[[project.authors]]
name = "SunkaraboinaPraveenKumar"
email = "sunkaraboinap@gmail.com"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
universal-data-copilot = "universal_data_copilot:main"
